right, the timeout goes *after* the callback.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
   <body>
     <script>
-      setTimeout(200, function() {
+      setTimeout(function() {
         var url = 'https://github.com/mgax/foss4gcee2013-pygis/blob/master/README.rst';
         window.location.href = url;
-      });
+      }, 200);
     </script>
   </body>
 </html>
